correct routes, methods and parameters
